# prova

./: .gitignore  verifiers
.github/: copilot-instructions.md
backend/: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
backend/crates/gateway/: Cargo.toml  Dockerfile  build.rs
backend/crates/gateway/src/: config.rs  error.rs  main.rs
backend/crates/gateway/src/db/: mod.rs
backend/crates/gateway/src/db/migrations/: 001_create_users.sql  002_create_api_keys.sql  003_create_proofs.sql  004_create_verification_keys.sql  005_add_external_id_and_auth_schema.sql  006_enhance_verification_keys.sql  007_create_anchors.sql  008_user_prover_association.sql
backend/crates/gateway/src/middleware/: auth.rs  rate_limit.rs
backend/crates/gateway/src/models/: anchor.rs  api_key.rs  mod.rs  user.rs  verification_key.rs
backend/crates/gateway/src/routes/: internal.rs  mod.rs  provers.rs  verify.rs  vk.rs
backend/crates/gateway/src/services/: anchor_service.rs  mod.rs  proof_registry.rs  verifier.rs  vk_service.rs
backend/crates/services/rust/: .env.example  Cargo.toml  Dockerfile  build.rs  manifest.example.yaml
backend/crates/services/rust/src/: main.rs  manifest.rs  service.rs
backend/deployments/: docker-compose.dev.yml  docker-compose.yml
backend/sdk/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
frontend/: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  package-lock.json  package.json
sdk/: package-lock.json  package.json
sdk/src/: client.ts  errors.ts
sdk/test/: client.test.ts
(+22 files in other folders)
