[package]
name = "prova-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.14"
tonic-prost = "0.14"
tonic-reflection = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["full", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0"
tempfile = "3"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"

[build-dependencies]
tonic-prost-build = "0.14"
